--- a/Preguicoso2/war/Preguicoso2.css
+++ b/Preguicoso2/war/Preguicoso2.css
@@ -1,34 +1,319 @@
-/** Add css rules here for your application. */
+body{
+		background-color:#E7E0DF;
+		margin:0;
+	}
+	
+	.coluna1{
+		background-image:url(ìmg/background_coluna1.png);
+		height:100%;
+		width: 18.667% !important;
+	}
+	.container_menu{
+	    background-color:#E7E0DF;
+		border-bottom:#B9A39E 2px solid;
+	}
+	.nome_restaurante{
+		background-color:#EDE7E6;
+		font-family:Arial Black;
+		font-size:13px;
+		padding-top:10px;
+		padding-bottom:10px;
+		color:#513E39;
+		border-top:#B9A39E 2px solid;
+		border-bottom:#DDD2D0 2px solid;
+	}
+	.nome_restaurante label{
+		margin-left:28px;
+	}
+	.nome_restaurante img{
+		float:left;
+		margin-left: 7px;
+		margin-top: -5px;
+	    
+    }
+	.nome_menu{
+		background-color:#E7E0DF;
+		font-family:Arial Black;
+		font-size:13px;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		color:#513E39;
+		border-top:#F1EDED 2px solid;
+	}
+	.nome_menu label{
+		margin-left:10px;
+	}
+	.nome_menu img{
+		float:right;
+		margin-left: 7px;
+		margin-top: 3px;
+	    
+    }
+	.nome_menu_detalhe{
+		background-color:#B9A39E;
+		padding-top: 5px;
+		padding-bottom: 5px;
+	    
+    }
+	
+	.itens_menu{
+		background-color:#E7E0DF;
+		font-family:Arial Black;
+		font-size:13px;
+		color:#513E39;
+		border-top:#C6B4B0 1px solid;
+		border-bottom:#DDD2D0 2px solid;
+		padding-bottom:10px;
+	}
+	.itens_menu ul{
+		padding:0;
+		margin:0;
+		padding-left:10px;
+	}
+	.itens_menu .menuItem{
+		display:inline-block;
+		font-family:arial;
+		padding:5px;
+		color:#AA8D88;
+		background-color:#DDD2D0;
+		border-right: #C6B4B0 1px solid;
+		border-bottom: #C6B4B0 1px solid;
+		border-left: #C6B4B0 1px solid;
+		margin:0;
+		margin-left:-6px;
+		font-size: 12px;
+	}
+	.itens_menu .active{
+		display:inline-block;
+		font-family:arial;
+		padding:5px;
+		background-color:#E7E0DF;
+		color:#513E39;
+		border-bottom: 1px solid #E6E0DF;
+	}
+	.itens_menu a{
+		font-family:arial;
+		padding:10px;
+		padding-left:30px;
+		display:block;
+		font-size:17px;
+		padding-bottom:0px;
+	}
+	.itens_menu a:hover{
+		
+		color:#8D726B;
+		text-decoration: underline;
+	}
+	.itens_menu a:visited{
+		
+		color:#664F4A;
+		text-decoration: underline;
+	}
+	.itens_menu a:link{
+		
+		color:#664F4A;
+		text-decoration:none;
+	}
+	.menu{
+		background-color: #DDD2D0;
+	}
+	
+	.coluna2{
+		background-color:#FEFFFF;
+		border-left:#B9A39E 2px solid;
+		border-top:#B9A39E 1px solid;
+		border-right:#B9A39E 2px solid;
+		height: 650px;
+		-webkit-border-top-left-radius: 10px;
+		-moz-border-top-left-radius: 10px;
+		border-top-left-radius: 10px;
+		-moz-box-shadow:    -1px 2px 6px 1px #C5B3B0;	
+		-webkit-box-shadow: -1px 2px 6px 1px #C5B3B0;
+		box-shadow:         -1px 2px 6px 1px #C5B3B0;
+		-webkit-border-bottom-left-radius: 10px;
+		-moz-border-bottom-left-radius: 10px;
+		border-bottom-left-radius: 10px;
+		
+	}
+	.coluna2 h1{
+		font-family: arial;
+		color: #333;
+		margin: 10px;
+		margin-left:30px;
+		text-align: left;
+	}
+	.coluna2 .container_coluna2{
+		background-color:#F4F0EF;
+		border-top:#B9A39E 1px solid;
+		height: 91%;
+		-webkit-border-bottom-left-radius: 10px;
+		-moz-border-bottom-left-radius: 10px;
+		border-bottom-left-radius: 10px;
+	}
+	
+	.coluna2 .container_coluna2 .container{
+		background-color:#FFFFFF;
+		border-left:#B9A39E 1px solid;
+		margin-left:30px;
+		margin-right:15px;
+		height: 95%;
+	}
 
- 
-/** Example rules used by the template application (remove for your app) */
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
-}
-
-.sendButton {
-  display: block;
-  font-size: 16pt;
-}
-
-/** Most GWT widgets already have a style name defined */
-.gwt-DialogBox {
-  width: 400px;
-}
-
-.dialogVPanel {
-  margin: 5px;
-}
-
-.serverResponseLabelError {
-  color: red;
-}
-
-/** Set ids using widget.getElement().setId("idOfElement") */
-#closeButton {
-  margin: 15px 6px 6px;
-}
+	.coluna2_barra{
+		background-image:url(img/background_barra.png);
+		height: 27px;
+	}
+	.coluna2_barra button{
+		border:none;
+		background-color:#F4F0EF;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		border:1px #D3C6C3 solid;
+		font-weight: bold;
+		color:#846660;
+		-moz-box-shadow: -1px 1px 3px 0.5px #C5B3B0;
+		-webkit-box-shadow: -1px 1px 3px 0.5px #C5B3B0;
+		box-shadow: -1px 1px 3px 0.5px #C5B3B0;
+		margin-left: 10px;
+	}
+	.coluna2_barra button:hover{
+		background-color:#93716B;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		border:1px #765B55 solid;
+		font-weight: bold;
+		color:#FEFFFF;
+		-moz-box-shadow: -1px 1px 3px 0.5px #C5B3B0;
+		-webkit-box-shadow: -1px 1px 3px 0.5px #C5B3B0;
+		box-shadow: -1px 1px 3px 0.5px #C5B3B0;
+	}
+	.coluna2_barra button:active{
+		background-color:#93716B;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		border:1px #765B55 solid;
+		font-weight: bold;
+		color:#FEFFFF;
+		-moz-box-shadow: 0px 1px 3px 0.5px #C5B3B0;
+		-webkit-box-shadow: 0px 1px 3px 0.5px #C5B3B0;
+		box-shadow: 0px 1px 3px 0.5px #C5B3B0;
+	}
+	
+	.coluna3{
+		background-color:#F4F0EF;
+		border-left:#E8E1DF 2px solid;
+		border-top:#B9A39E 1px solid;
+		border-right:#B9A39E 2px solid;
+		height:650px;
+		width: 31.667% !important;
+		-webkit-border-top-right-radius: 10px;
+		-moz-border-top-right-radius: 10px;
+		border-top-right-radius: 10px;
+		-webkit-border-bottom-right-radius: 10px;
+		-moz-border-bottom-right-radius: 10px;
+		border-bottom-right-radius: 10px;
+	}
+	.coluna3 h1{
+		font-family: arial;
+		color: #333;
+		margin: 10px;
+		margin-left:30px;
+		text-align: left;
+	}
+	.coluna3 .container_coluna3{
+		background-color:#FFFFFF;
+		border-top:#B9A39E 1px solid;
+		height: 93%;
+		-webkit-border-bottom-right-radius: 10px;
+		-moz-border-bottom-right-radius: 10px;
+		border-bottom-right-radius: 10px;
+	}
+	.coluna3 .container_barra{
+		height:40px;
+		font-size:30px;
+		font-family:arial;
+		color:#876761;
+		text-align:right;
+		margin-right:10px;
+	}
+	
+	.lista{
+		
+	}
+	.lista small{
+		margin-left: -25px;
+		padding-bottom: 0px;
+		padding-top: 7px;;
+		display:inline-block;
+		cursor:pointer;
+	}
+	.lista small:hover{
+		background-image:url(img/background_lista.png);
+		color:#F4F0EF;
+		
+	}
+	.lista .lista_texto{
+		margin-left: 60px;
+		margin-top: 10px;
+		margin-bottom: 5px;
+		display:inline-block;
+		cursor:pointer;
+	}
+	.lista .lista_preco{
+		float:right;
+		margin-left: 60px;
+		margin-right: 30px;
+		margin-top: 10px;
+		margin-bottom: 5px;
+		display:inline-block;
+		cursor:pointer;
+	}
+	.listaItems{
+		border-bottom: 1px solid #E9E2E0;
+	}
+	
+	.listaItems:hover{
+		border-bottom: 1px solid #C8B6B0;
+	}
+	
+	.listaItems:active{
+		background-color:#D8CBC7;
+	}
+	.listaItems input{
+		border:none;
+	}
+	.lista_preco input{
+		width:45px;
+	}
+	.listaCategoria{
+		margin-left: -31px;
+		display:block;
+		background-color:#F4F0EF;
+		border-top: 1px solid #C8B6B0;
+		border-bottom: 1px solid #C8B6B0;
+		border-right: 1px solid #C8B6B0;
+		margin-top: 13px;
+		color:#876761;
+		cursor:pointer;
+		
+	}
+	.listaCategoria .lista_texto{
+	
+		display:inline-block;
+		margin-left: 35px;
+		margin-right:20px;
+		margin-top: 3px;
+		margin-bottom: 3px;
+		font-size: 15px;
+	}
+	
+	.listaCategoria:hover{
+		border-bottom: 1px solid #C8B6B0;
+	}
+	
+	.listaCategoria:active{
+		background-color:#D8CBC7;
+	}
