--- a/Preguicoso2/war/Preguicoso2.css
+++ b/Preguicoso2/war/Preguicoso2.css
@@ -149,13 +149,14 @@ body{
 		-webkit-border-bottom-left-radius: 10px;
 		-moz-border-bottom-left-radius: 10px;
 		border-bottom-left-radius: 10px;
+		overflow-y:scroll;
 	}
 	
 	.coluna2 .container_coluna2 .container{
 		background-color:#FFFFFF;
 		border-left:#B9A39E 1px solid;
 		margin-left:30px;
-		margin-right:15px;
+		margin-right:0px;
 		height: 95%;
 	}
 
@@ -282,6 +283,9 @@ body{
 	.listaItems:active{
 		background-color:#D8CBC7;
 	}
+	.click{
+		background-color:#D8CBC7;
+	}
 	.listaItems input{
 		border:none;
 	}
@@ -290,7 +294,7 @@ body{
 	}
 	.listaCategoria{
 		margin-left: -31px;
-		display:block;
+		display: inline-block;
 		background-color:#F4F0EF;
 		border-top: 1px solid #C8B6B0;
 		border-bottom: 1px solid #C8B6B0;
@@ -316,4 +320,94 @@ body{
 	
 	.listaCategoria:active{
 		background-color:#D8CBC7;
+	}
+	
+	.container{
+		margin-right:30px;
+	}
+	.container_barra img{
+		margin-right: 89%;
+		margin-top: 8px;
+	}
+	.container .imagem{
+		width: 139px;
+		height: 62px;
+		border: #CFBFBB 1px solid;
+		-webkit-border-radius: 4px;
+		-moz-border-radius: 4px;
+		border-radius: 4px;
+		background-color: #FBF9F9;
+		color: #B89F99;
+		text-align: center;
+		padding-top: 40px;
+		border-image: initial;
+		margin-left: 30px;
+		margin-top: 30px;
+	}
+	.container .imagem:hover{
+		background-color: #F5F1F1;
+		color: #B89F99;
+		
+		
+	}
+	.container hr{
+		border-color:#B89F99;
+	}
+	.container h3{
+		
+		font-family:arial;
+		margin-top:10px;
+	}
+	.container h3 label input{
+		font-family:arial;
+		font-size:25px;
+		margin-bottom: -13px;
+	}
+	.container label{
+		font-size:15px;
+		color:#B8A19C;
+		display:block;
+		margin-left:30px;
+	}
+	.container label input{
+		display:block;
+		width:100%;
+		border:none;
+		font-size:20px;
+		color:black;
+	}
+	.container label input:focus{
+		font-size:13px;
+		color:#B8A19C;
+		display:block;
+		width:100%;
+		font-size:20px;
+		color:black;
+	}
+	.container label select{
+		font-size:13px;
+		color:#B8A19C;
+		display:block;
+		width:100%;
+		border:none;
+		font-size:20px;
+		color:black;
+	}
+	.container label textarea{
+		font-size:20px;
+		color:black;
+		color:#B8A19C;
+		border: 1px #CFBEBA solid;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		display:block;
+		width:100%;
+		border:none;
+		color:black;
+		font-family:arial;
+	}
+	.check input{
+		display:inline !important;
+		width:15px !important;
 	}
