Nome do restaurante carregado no backend. Criação do histórico de pedidos, faltando os detalhes do histórico. Algumas correções que fiz e não lembro.

--- a/Preguicoso2/war/Preguicoso2.css
+++ b/Preguicoso2/war/Preguicoso2.css
@@ -449,6 +449,10 @@ body {
 	background-color: #F4F0E0;
 }
 
+.lista .recusada {
+	background-color: #FFF2C6;
+}
+
 .lista small {
 	margin-left: -25px;
 	padding-bottom: 0px;
