--- a/Preguicoso2/war/Preguicoso2.css
+++ b/Preguicoso2/war/Preguicoso2.css
@@ -940,6 +940,33 @@ body {
 	font-family: arial;
 }
 
+	.tabela{
+		width:363px;
+		margin-left:30px;
+		border:1px #D6CAC8 solid;
+			-webkit-border-top-right-radius: 10px;
+		-moz-border-top-right-radius: 10px;
+		border-top-right-radius: 10px;
+		-webkit-border-top-left-radius: 10px;
+		-moz-border-top-left-radius: 10px;
+		border-top-left-radius: 10px;
+		background-image: url(background_barra.png);
+		background-repeat: repeat-x;
+		padding-top:4px;
+		padding-bottom:4px;
+	}
+	.tabela_header span{
+		display: inline-block;
+		font-weight:bold;
+	}
+	.tabela_iten span{
+		display: inline-block;
+	
+	}
+	.odd{
+		background-color: #F4F0EF;
+	}
+
 .check input {
 	display: inline !important;
 	width: 15px !important;
