--- a/trunk/Preguicoso2/war/Preguicoso2.css
+++ b/trunk/Preguicoso2/war/Preguicoso2.css
@@ -505,8 +505,6 @@ body {
 
 .lista .lista_timestamp {
 	float: right;
-	margin-left: 60px;
-	margin-right: 30px;
 	margin-top: 10px;
 	margin-bottom: 5px;
 	display: inline-block;
@@ -680,7 +678,7 @@ body {
 		float: left;
 	}
     .active{
-		margin-right: 89%;
+/* 		margin-right: 89%; */
 		margin-top: 8px;
 		-moz-box-shadow: 0px 1px 3px 0.5px #C5B3B0;
 		-webkit-box-shadow: 0px 1px 3px 0.5px #C5B3B0;
@@ -845,7 +843,7 @@ body {
 }
 
 .active {
-	margin-right: 89%;
+/* 	margin-right: 89%; */
 	margin-top: 8px;
 	-moz-box-shadow: 0px 1px 3px 0.5px #C5B3B0;
 	-webkit-box-shadow: 0px 1px 3px 0.5px #C5B3B0;
