Detalhes do layout de descrição do pedido

--- a/Preguicoso2/war/Preguicoso2.css
+++ b/Preguicoso2/war/Preguicoso2.css
@@ -939,7 +939,7 @@ body {
 }
 
 	.tabela{
-		width:363px;
+		width:96%;
 		margin-left:30px;
 		border:1px #D6CAC8 solid;
 			-webkit-border-top-right-radius: 10px;
